--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 .principal {
  background:#CCCCCC;
+ padding:30px;
 }
 
 h1 {
@@ -27,6 +28,7 @@ em strong {
 
  .benefícios {
 background: #FFFFFF;
+  padding:20xp;
 } 
 
  .itens{
