--- a/style.css
+++ b/style.css
@@ -1,47 +1,48 @@
- body {
-}
-
 #banner {
- width: 100%
+	width:100%;
 }
 
-.principal {
- background:#CCCCCC;
- padding:30px;
+.principal{
+	background: #CCCCCC;
+	padding: 30px;
 }
 
-h1 {
- text-align: center;
+.titulo-principal {
+	padding-left: 20px;
 }
 
-p{
- text-align: center;
- background: #CCCCCC;
+.titulo-centralizado {
+	text-align: center
 }
 
- #missão {
- font-size:20px;
+p {
+	text-align: center;
 }
+
+#missao {
+	font-size: 20px
+}
+
 em strong {
- color:#ffoooo;
+	color: #FF0000;
 }
 
- .benefícios {
-background: #FFFFFF;
-  padding:20xp;
-} 
+.itens {
+	font-style: italic
+}
 
- .itens{
- font-style: italic;
-} 
-
-.imagembenefícios{
- width:50%;
-} 
+.beneficios {
+	background: #FFFFFF;
+	padding: 20px;
+}
 
 ul {
- display: inline-block;
- vertical-align:top;
- width:20%;
- margin-right:15%;
-} 
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagembeneficios {
+	width: 50%;
+}
